--- a/signup_Here.html
+++ b/signup_Here.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library for Aquatic Information</title>
+    <title>Signup</title>
     <link rel="icon" type="image/png" href="Screenshot 2025-09-22 233615.png">
 </head>
 <body>
-        
+    <h2>SIGNUP</h2>
+    <p>Already Have an Account?<a href="index.html">Login Here</a></p>    
 </body>
 </html>
