--- a/signup_Here.html
+++ b/signup_Here.html
@@ -7,7 +7,26 @@
     <link rel="icon" type="image/png" href="Screenshot 2025-09-22 233615.png">
 </head>
 <body>
+    <div><img src="logofull.png"></div>
     <h2>SIGNUP</h2>
-    <p>Already Have an Account?<a href="index.html">Login Here</a></p>    
+    <p>Already Have an Account?<a href="index.html">Login Here.</a></p>    
+    <div>
+        <input type="text" placeholder="Enter your email address">
+    </div>
+    <br>
+    <div>
+        <input type="text" placeholder="Enter your password">
+    </div>
+    <br>    
+    <div>
+        <input type="text" placeholder="Confirm your password">
+    </div>
+    <br>
+    <button >Proceed</button>
+    <p>Or Sign in with</p>    
+    <div>
+        <button><img src="Google.png"></button>&nbsp;&nbsp;        
+        <button><img src="Microsoft.png"></button>        
+    </div>
 </body>
 </html>
