--- a/signup_Here.html
+++ b/signup_Here.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Signup.css">
     <title>Signup</title>
     <link rel="icon" type="image/png" href="Screenshot 2025-09-22 233615.png">
 </head>
 <body>
-    <div><img src="logofull.png"></div>
-    <h2>SIGNUP</h2>
-    <p>Already Have an Account?<a href="index.html">Login Here.</a></p>    
-    <div>
-        <input type="text" placeholder="Enter your email address">
-    </div>
-    <br>
-    <div>
-        <input type="text" placeholder="Enter your password">
-    </div>
-    <br>    
-    <div>
-        <input type="text" placeholder="Confirm your password">
-    </div>
-    <br>
-    <button >Proceed</button>
-    <p>Or Sign in with</p>    
-    <div>
-        <button><img src="Google.png"></button>&nbsp;&nbsp;        
-        <button><img src="Microsoft.png"></button>        
+    <div class="container">
+        <div class="left"></div>
+        <div class="right">
+            <img src="logofull.png" width="300">
+            
+            <h2 id="m">SIGNUP</h2>
+            <p>Already Have an Account? <a href="Login.html">Login Here.</a></p>    
+
+            <input type="text" placeholder="Enter your email address" class="input-box">
+            <input type="password" placeholder="Enter your password" class="input-box">
+            <input type="password" placeholder="Confirm your password" class="input-box">
+
+            <button class="btn">Proceed</button>
+
+            <p>Or Sign in with</p>    
+            <div class="social-icons">
+                <button><img src="Google.png" alt="Google"></button>        
+                <button><img src="Microsoft.png" alt="Microsoft"></button>        
+            </div>
+        </div>
     </div>
 </body>
 </html>
